[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Materials/Green.tres" type="Material" id=1]
[ext_resource path="res://Assets/Meshes/SpaceShip.tres" type="ArrayMesh" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.00740741, 0.340741, 0.6 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.963867, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.415909 ), 0.0, 0.0, 0, 0, Vector2( 0.234177, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.670455 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
direction = Vector3( 0, 0, 1 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )
size = Vector2( 0.1, 0.1 )

[sub_resource type="SphereShape" id=8]
radius = 1.44281

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.851852, 1 )
colors = PoolColorArray( 0.0117188, 0.661243, 1, 1, 0, 0.484375, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[node name="Player" type="Area"]
collision_mask = 4
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.995305, 0.0967838, 0, -0.0967838, 0.995305, 0, 2.81831, 5.66831 )
far = 1000.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.925527, 1.37914e-08, -0.378681, 0.289209, 0.645538, 0.706851, 0.244453, -0.763728, 0.597463, -1.53774, 1.71876, 2.67461 )
visible = false

[node name="Rotation_Pivot" type="Spatial" parent="."]

[node name="Mesh" type="MeshInstance" parent="Rotation_Pivot"]
transform = Transform( -100, 0, -8.74228e-06, -8.74228e-06, -4.37114e-06, 100, -3.82137e-13, 100, 4.37114e-06, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="Thruster_Left" type="Particles" parent="Rotation_Pivot/Mesh"]
transform = Transform( -0.01, -8.74228e-10, -3.82137e-17, 8.13152e-25, -4.37114e-10, 0.01, -8.74228e-10, 0.01, 4.37114e-10, 0.00289793, 0.0145145, 8.87793e-10 )
amount = 100
preprocess = 1.86
visibility_aabb = AABB( -12, -11, -14, 24, 22, 28 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="Thruster_Middle" type="Particles" parent="Rotation_Pivot/Mesh"]
transform = Transform( -0.01, -8.74228e-10, -3.82137e-17, 8.13152e-25, -4.37114e-10, 0.01, -8.74228e-10, 0.01, 4.37114e-10, 4.68454e-05, 0.0145145, 6.38543e-10 )
amount = 100
preprocess = 1.86
visibility_aabb = AABB( -12, -11, -14, 24, 22, 28 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="Thruster_Right" type="Particles" parent="Rotation_Pivot/Mesh"]
transform = Transform( -0.01, -8.74228e-10, -3.82137e-17, 8.13152e-25, -4.37114e-10, 0.01, -8.74228e-10, 0.01, 4.37114e-10, -0.00292699, 0.0145145, 3.78562e-10 )
amount = 100
preprocess = 1.86
visibility_aabb = AABB( -12, -11, -14, 24, 22, 28 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 8 )

[node name="Shoot_Spawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5012 )

[node name="Shooting_Flash" type="Particles" parent="."]
transform = Transform( -1, 7.10543e-15, -8.74228e-08, 7.10543e-15, 1, -3.55271e-15, 8.74228e-08, -3.55271e-15, -1, -0.00468454, -7.10543e-15, -1.73525 )
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB( -12, -11, -14, 24, 22, 28 )
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 7 )

[node name="Shooting_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="Shooting_Timer" to="." method="_on_Shooting_Timer_timeout"]
